Fixing overflow for reservation accordion

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -22,7 +22,6 @@
 .overflow-accordion {
   overflow-y: auto;
   max-height: calc(100vh - 500px);
-  min-height: calc(100vh - 500px);
 }
 
 label.required:after, legend.required:after  {
